--- a/src/index.sass
+++ b/src/index.sass
@@ -11,3 +11,8 @@
 	.page-container
 		max-width: 1280px
 		@apply mx-auto
+	.movie-list .swiper-slide
+		width: 300px
+		height: auto
+	.banner .swiper
+		height: 100%
