--- a/src/index.sass
+++ b/src/index.sass
@@ -16,3 +16,12 @@
 		height: auto
 	.banner .swiper
 		height: 100%
+.pagination
+	display: flex
+	align-items: center
+	justify-content: center
+	gap: 20px
+	li
+		&.selected
+			@apply text-primary
+
